--- a/public/css/stylesheets/sass/styles.css
+++ b/public/css/stylesheets/sass/styles.css
@@ -8788,3 +8788,7 @@ button.close {
     display: none !important;
   }
 }
+/* line 7, ../../sass/partials/_base.scss */
+.quill {
+  height: 400px;
+}
